# ci-log-processing

./: .gitignore  .gitreview  .stestr.conf  .zuul.yaml  Dockerfile  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
ansible/playbooks/: check-services-sender.yml  check-services.yml  deploy-services.yml  service-loggearman.yml  service-logscraper.yml
ansible/roles/backup-dashboards-objects/tasks/: main.yml
ansible/roles/check-services/tasks/: build.yml  download.yml  main.yml  opensearch.yml  verify.yml
ansible/roles/check-services/templates/: logstash-index.conf.j2
ansible/roles/loggearman/: README.rst
ansible/roles/loggearman/defaults/: main.yml
ansible/roles/loggearman/handlers/: main.yml
ansible/roles/loggearman/tasks/: main.yml  service.yml
ansible/roles/loggearman/templates/: client.yml.j2  loggearman.service.j2  loggearman.sh.j2  worker.yml.j2
ansible/roles/logscraper/: README.rst
ansible/roles/logscraper/defaults/: main.yml
ansible/roles/logsender/: README.rst
doc/: requirements.txt
doc/source/: ansible-role.rst  conf.py  index.rst  infra-changelog.md  loggearman-role.rst  loggearman.rst  logscraper.rst  logsender-role.rst  logsender.rst  opensearch-configuration.md
loggearman/: Dockerfile  README.rst  requirements.txt  setup.cfg  setup.py
loggearman/loggearman/: client.py  worker.py
logscraper/: config.yaml.sample  download-list.yaml.sample  logscraper.conf.sample  logscraper.py  logscraper.yaml.sample  logsender.conf.sample  logsender.py  logsender.yaml.sample  opensearch_dashboards_backup.py
logscraper/tests/: base.py  performance-example.json  test_logscraper.py  test_logsender.py  testrepository.subunit
opensearch-config/: Dockerfile  README.md  deploy_opensearch.sh  ecr.yaml  logstash_cluster.yaml  opensearch.yaml
opensearch-config/config/: input.conf  logstash.yml  openstack-filters.conf  output.conf  pipeline.conf
opensearch-dashboards-objects/: dashboard-global.yaml  index-pattern-global.yaml  visualization-global.yaml
roles/backup-dashboards-objects/defaults/: main.yml
roles/backup-dashboards-objects/tasks/: main.yml
roles/check-services/tasks/: logprocessing.yml  main.yml  opensearch.yml  verify.yml
roles/logscraper/: README.rst
roles/logscraper/defaults/: main.yml
roles/logscraper/meta/: main.yml
roles/logscraper/tasks/: main.yml  service.yml
roles/logscraper/templates/: config.j2  download-list.yaml.j2  logscraper.service.j2  logscraper.sh.j2
roles/logsender/: README.rst
roles/logsender/defaults/: main.yml
roles/logsender/meta/: main.yml
roles/logsender/tasks/: main.yml  service.yml
roles/logsender/templates/: logsender.service.j2  logsender.sh.j2
(+12 files in other folders)
