[metadata]
name = logscraper
summary = OpenStack CI Log Processing tool
description-file =
    README.rst
author = Openstack Contributors
author-email = openstack-discuss@lists.openstack.org
home-page = http://docs.openstack.org/infra/ci-log-processing
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    logscraper

[entry_points]
console_scripts =
    logscraper = logscraper.logscraper:main
    logsender = logscraper.logsender:main
