[metadata]
name = logscraper
summary = OpenStack CI Log Processing tool
description = "Get latest done logs from Zuul CI and push to Opensearch"
long_description = file: README.rst
author = Openstack Contributors
author_email = openstack-discuss@lists.openstack.org
home_page = http://docs.openstack.org/infra/ci-log-processing
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    logscraper

[entry_points]
console_scripts =
    logscraper = logscraper.logscraper:main
    logsender = logscraper.logsender:main
    opensearch_dashboards_backup = logscraper.opensearch_dashboards_backup:main
