[metadata]
name = loggearman
summary = OpenStack Log Processor Module
description_file =
    README.rst
author = Openstack Contributors
author_email = service-discuss@lists.opendev.org
home_page = http://docs.openstack.org/infra/ci-log-processing
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[entry_points]
console_scripts =
    log-gearman-client = loggearman.client:main
    log-gearman-worker = loggearman.worker:main
